crates/aranya-policy-compiler/tests/data/scoping/action_arg_redefine_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `n` is defined multiple times
  |
1 | action foo(n int) {
  |            - previous defintion here
2 |     let n = n
  |         ^ re-defined here
